# CNN

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  main.cpp  tests.cpp
src/model/: CNN.cpp  CNN.h  CNN_network.h  network_interface.cpp  network_interface.h  tests.cpp
src/model/MLP/: MLP_network.h  cnn_funcs.cpp  graph_network.cpp  matrix_network.cpp  train_net.cpp
src/model/matrix/: s21_matrix.cpp  s21_matrix_oop.h
